--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Redirecting to https://docs.zeet.co/reference/application/helm/</title>
-<meta http-equiv="refresh" content="0; URL=https://docs.zeet.co/reference/application/helm/">
+<meta http-equiv="refresh" content="0; URL=https://docs.zeet.co/guides/deploy/helm/">
 <link rel="canonical" href="https://docs.zeet.co/reference/application/helm/">
